log
Sat 10 Sep 2022 12:37:54 AM UTC: 
 tests:  0|6
total_score: 0/70
427dfc3
Sat 10 Sep 2022 12:46:34 AM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
82fb345
Sat 10 Sep 2022 12:48:00 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
3bf980a
Sat 10 Sep 2022 12:48:33 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|0
aef53bb
Sat 10 Sep 2022 12:50:47 AM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:1: error: unknown type name ‘Map’
   55 | Map * new = (Map *)malloc(sizeof(Map));
      | ^~~
hashmap.c:55:14: error: ‘Map’ undeclared (first use in this function)
   55 | Map * new = (Map *)malloc(sizeof(Map));
      |              ^~~
hashmap.c:55:14: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:19: error: expected expression before ‘)’ token
   55 | Map * new = (Map *)malloc(sizeof(Map));
      |                   ^
hashmap.c:56:5: error: implicit declaration of function ‘assert’ [-Werror=implicit-function-declaration]
   56 |     assert(new != NULL); // No hay memoria para reservar la Mapa.
      |     ^~~~~~
hashmap.c:7:1: note: ‘assert’ is defined in header ‘<assert.h>’; did you forget to ‘#include <assert.h>’?
    6 | #include "hashmap.h"
  +++ |+#include <assert.h>
    7 | 
hashmap.c:57:8: error: request for member ‘head’ in something not a structure or union
   57 |     new->head = new->tail = new->current = NULL;
      |        ^~
hashmap.c:57:20: error: request for member ‘tail’ in something not a structure or union
   57 |     new->head = new->tail = new->current = NULL;
      |                    ^~
hashmap.c:57:32: error: request for member ‘current’ in something not a structure or union
   57 |     new->head = new->tail = new->current = NULL;
      |                                ^~
hashmap.c:58:8: error: request for member ‘is_equal’ in something not a structure or union
   58 |     new->is_equal = is_equal;
      |        ^~
hashmap.c:59:8: error: request for member ‘lower_than’ in something not a structure or union
   59 |     new->lower_than = NULL;
      |        ^~
hashmap.c:60:12: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   60 |     return new;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
7929e25
Sat 10 Sep 2022 12:53:57 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘Map’
   55 |   Map * new = (Map *)malloc(sizeof(Map));
      |   ^~~
hashmap.c:55:16: error: ‘Map’ undeclared (first use in this function)
   55 |   Map * new = (Map *)malloc(sizeof(Map));
      |                ^~~
hashmap.c:55:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:21: error: expected expression before ‘)’ token
   55 |   Map * new = (Map *)malloc(sizeof(Map));
      |                     ^
hashmap.c:56:3: error: implicit declaration of function ‘assert’ [-Werror=implicit-function-declaration]
   56 |   assert(new != NULL); // No hay memoria para reservar la Mapa.
      |   ^~~~~~
hashmap.c:7:1: note: ‘assert’ is defined in header ‘<assert.h>’; did you forget to ‘#include <assert.h>’?
    6 | #include "hashmap.h"
  +++ |+#include <assert.h>
    7 | 
hashmap.c:57:6: error: request for member ‘is_equal’ in something not a structure or union
   57 |   new->is_equal = is_equal;
      |      ^~
hashmap.c:58:3: error: ‘map’ undeclared (first use in this function)
   58 |   map->buckets = (Pair **) calloc (10,sizeof(Pair *));
      |   ^~~
hashmap.c:60:10: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   60 |   return new;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
213a818
Sat 10 Sep 2022 12:54:18 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:3: error: unknown type name ‘Map’
   55 |   Map * new = (Map *)malloc(sizeof(Map));
      |   ^~~
hashmap.c:55:16: error: ‘Map’ undeclared (first use in this function)
   55 |   Map * new = (Map *)malloc(sizeof(Map));
      |                ^~~
hashmap.c:55:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:55:21: error: expected expression before ‘)’ token
   55 |   Map * new = (Map *)malloc(sizeof(Map));
      |                     ^
hashmap.c:56:3: error: implicit declaration of function ‘assert’ [-Werror=implicit-function-declaration]
   56 |   assert(new != NULL); // No hay memoria para reservar la Mapa.
      |   ^~~~~~
hashmap.c:7:1: note: ‘assert’ is defined in header ‘<assert.h>’; did you forget to ‘#include <assert.h>’?
    6 | #include "hashmap.h"
  +++ |+#include <assert.h>
    7 | 
hashmap.c:57:6: error: request for member ‘is_equal’ in something not a structure or union
   57 |   new->is_equal = is_equal;
      |      ^~
hashmap.c:58:3: error: ‘map’ undeclared (first use in this function)
   58 |   map->buckets = (Pair **) calloc (10,sizeof(Pair *));
      |   ^~~
hashmap.c:60:10: error: returning ‘int *’ from a function with incompatible return type ‘HashMap *’ {aka ‘struct HashMap *’} [-Werror=incompatible-pointer-types]
   60 |   return new;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
5fc5b22
Sat 10 Sep 2022 12:55:49 AM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|6
total_score: 0/70
9ecd9c8
Sat 10 Sep 2022 12:56:06 AM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
2dab277
Sat 10 Sep 2022 12:56:51 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
28bad58
Sat 10 Sep 2022 12:57:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
238bc3e
Sat 10 Sep 2022 12:59:06 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
13f8ed4
Sat 10 Sep 2022 12:59:22 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
489d4c9
Sat 10 Sep 2022 12:59:32 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
a18d6ce
Sat 10 Sep 2022 12:59:54 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
b229df2
Sat 10 Sep 2022 01:00:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
3e3b375
Sat 10 Sep 2022 01:00:35 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
d3ac806
Sat 10 Sep 2022 01:01:46 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:3: error: ‘new’ undeclared (first use in this function)
   60 |   new->key = key;
      |   ^~~
hashmap.c:60:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:14: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
   60 |   new->key = key;
      |              ^~~
      |              key_t
hashmap.c:61:16: error: ‘value’ undeclared (first use in this function)
   61 |   new->value = value;
      |                ^~~~~
Compilation failed
c1258c2
